force-app/main/default/objects/Province_Master_Data__c/Province_Master_Data__c.object-meta.xml
<CustomObject>
    <label>Master Province</label>
    <nameField>
        <label>Province Master Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Province</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>