force-app/main/default/objects/Province_Master_Data__c/fields/Asset_Province_Formula__c.field-meta.xml
<CustomField>
    <fullName>Asset_Province_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Province</label>
    <type>Text</type>
</CustomField>