force-app/main/default/objects/Province_Master_Data__c/fields/Legal_Province__c.field-meta.xml
<CustomField>
    <fullName>Legal_Province__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Province</label>
    <type>Text</type>
</CustomField>